--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,9 +1,10 @@
-/* 
-.header {
+
+header {
     position: sticky;
     top: 0;
     z-index: 15;
     border-bottom: 1px solid black;
+    background-color: lightblue;
 }
 .covid-19 {
     background-color: red;
@@ -57,8 +58,5 @@
 }
 .nav-item input:hover {
     width: 12.8em;
-} */
+} 
 
-* {
-    background-color: red;
-}
