--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -1,38 +1,38 @@
 <%- include ('header') %> 
     <div class="contenedor" style="max-width: 700px;width:100%;margin: 50px auto 0px">
       <h2>Add product</h2>
-        <form action="http://localhost:5000/api/productos" method="POST">
-            <div class="form-group row">
-              <label for="inputTitle" class="col-sm-2 col-form-label">Name</label>
-              <div class="col-sm-10">
-                <input type="text" name="title" class="form-control" id="inputTitle" placeholder="Nombre de tu producto">
-              </div>
+      <form action="/api/productos" method="POST">
+        <div class="form-group row">
+          <div class="col-sm-10">
+            <label for="inputTitle" class="col-sm-2 col-form-label">Name</label>
+            <input type="text" name="title" class="form-control" id="inputTitle" placeholder="Nombre de tu producto">
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-10">
+            <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
+            <input type="text" name="description" class="form-control" id="inputDescription" placeholder="Description de tu producto">
+          </div>
+        </div>
+        <div class="form-group row">
+        <div class="col-sm-10">
+            <label for="inputPrice" class="col-sm-2 col-form-label">Price</label>
+            <input type="number" name="price" class="form-control" id="inputPrice" placeholder="Precio de tu producto">
+          </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-10">
+              <label for="inputThumbnail" class="col-sm-2 col-form-label">Thumbnail</label>
+              <input type="text" name="thumbnail" class="form-control" id="inputThumbnail" placeholder="Thumbnail de tu producto">
             </div>
-            <div class="form-group row">
-              <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
-              <div class="col-sm-10">
-                <input type="text" name="description" class="form-control" id="inputDescription" placeholder="Description de tu producto">
-              </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-10">
+              <label for="inputStock" class="col-sm-2 col-form-label">Stock</label>
+              <input type="number" name="stock" class="form-control" id="inputStock" placeholder="Stock de tu producto">
             </div>
-            <div class="form-group row">
-                <label for="inputPrice" class="col-sm-2 col-form-label">Price</label>
-                <div class="col-sm-10">
-                  <input type="number" name="price" class="form-control" id="inputPrice" placeholder="Precio de tu producto">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="inputThumbnail" class="col-sm-2 col-form-label">Thumbnail</label>
-                <div class="col-sm-10">
-                  <input type="text" name="thumbnail" class="form-control" id="inputThumbnail" placeholder="Thumbnail de tu producto">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="inputStock" class="col-sm-2 col-form-label">Stock</label>
-                <div class="col-sm-10">
-                  <input type="number" name="stock" class="form-control" id="inputStock" placeholder="Stock de tu producto">
-                </div>
-              </div>
-            <button class="createCard" type="submit">Enviar</button>
-          </form>
+          </div>
+        <button class="createCard" type="submit">Enviar</button>
+      </form>
     </div>
     <hr>
