--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,7 +19,7 @@
                 <a class="nav-link" href="/api/productos">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/api/login">Login</a>
+              <a class="nav-link" href="/api/login-register">Login</a>
           </li>
           </ul>
         </div>
