--- a/views/registerlogin.ejs
+++ b/views/registerlogin.ejs
@@ -1,5 +1,5 @@
 <%- include ('header') %> 
-<div>
+<div class="register_div">
     <form action="/api/signup" method="POST" enctype="multipart/form-data">
         <h1>REGISTRATE!</h1>
         <div class="form-group row">
