--- a/styles/card.css
+++ b/styles/card.css
@@ -12,32 +12,32 @@
 }
   .card:hover {
 	 box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-  .card nav {
+}*/
+  /* .card nav {
 	 width: 100%;
 	 color: #727272;
 	 text-transform: uppercase;
 	 padding: 20px;
 	 border-bottom: 2px solid #efefef;
 	 font-size: 12px;
-}
+} */
 
-.card .photo {
+/*.card .image {
 	 padding: 30px;
 	 width: 45%;
 	 text-align: center;
 	 float: left;
 }
-  .card .photo img {
+  .card .image img {
 	 max-height: 240px;
 }
-  .card .description {
+  .card .content {
 	 padding: 30px;
 	 float: left;
 	 width: 55%;
 	 border-left: 2px solid #efefef;
 }
-  .card .description h1 {
+  .card .content h1 {
 	 color: #515151;
 	 font-weight: 300;
 	 padding-top: 15px;
@@ -45,27 +45,27 @@
 	 font-size: 30px;
 	 font-weight: 300;
 }
-  .card .description h2 {
+  .card .content h2 {
 	 color: #515151;
 	 margin: 0;
 	 text-transform: uppercase;
 	 font-weight: 500;
 }
-  .card .description h4 {
+  .card .content h4 {
 	 margin: 0;
 	 color: #727272;
 	 text-transform: uppercase;
 	 font-weight: 500;
 	 font-size: 12px;
 }
-  .card .description p {
+  .card .content p {
 	 font-size: 12px;
 	 line-height: 20px;
 	 color: #727272;
 	 padding: 20px 0;
 	 margin: 0;
 }
-  .card .description button {
+  .card button {
 	 outline: 0;
 	 border: 0;
 	 background: none;
@@ -80,7 +80,7 @@
 	 transition: all 0.3s ease;
 	 font-weight: 500;
 }
-  .card .description button:hover {
+  .card button:hover {
 	 border: 1px solid #aedaa6;
 	 color: #aedaa6;
 	 cursor: pointer;
