--- a/views/cartIndex.ejs
+++ b/views/cartIndex.ejs
@@ -1,55 +1,14 @@
-<div class="container">
-    <h1><i class="cart arrow down icon"></i>Mi Carrito</h1>
-    <hr>
 
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">Acción</th>
-          <th scope="col">Total</th>
-        </tr>
-      </thead>
-      <tbody id="items"></tbody>
-      <tfoot>
-        <tr id="footer">
-          <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
-        </tr>
-      </tfoot>
-    </table>
-    
-    <div class="row" id="items"></div>
-  </div>
-
-<template id="template-footer">
-    <th scope="row" colspan="2">Total productos</th>
-    <td>10</td>
-    <td>
-        <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-            vaciar todo
+<div id="cart_div">
+  <h3> Mi carrito! </h3>
+    <% if (typeof user_data !== 'undefined') { %>
+        <button style="background-color: #f38282; margin: 5px;" class="btn btn-sm" id="buy-carrito">
+          Finaliza tu compra! 
         </button>
-        <button style="background-color: greenyellow;" class="btn btn-sm" id="buy-carrito">
-           Finaliza tu compra! 
+        <h2> TOTAL: $<b id="total_price"> </b> </h2>
+    <% } else{ %>  
+        <button style="background-color: #f38282; margin: 5px" class="btn btn-sm">
+          <a style="text-decoration: none; color: white" href="/api/login-register"> ¡REGISTRATE! </a>
         </button>
-    </td>
-    <td class="font-weight-bold">$ <span>5000</span></td>
-</template>
-
-<template id="template-carrito">
-  <tr>
-    <th scope="row">id</th>
-    <td>Café</td>
-    <td>1</td>
-    <td>
-        <button class="btn btn-info btn-sm">
-            +
-        </button>
-        <button class="btn btn-danger btn-sm">
-            -
-        </button>
-    </td>
-    <td>$ <span>500</span></td>
-  </tr>
-</template>
+    <% } %>
+</div>
