--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-
   <!--Styles-->
   <link rel="stylesheet" href="/styles/header.css">
   <link rel="stylesheet" href="/styles/card.css">
-
+  <link rel="stylesheet" href="/styles/cart.css">
+  <link rel="stylesheet" href="/styles/productCard.css">
+  <link rel="stylesheet" href="/styles/cartTable.css">
   <title>Backend Ecommerce</title>
 </head>
   <body>
@@ -20,7 +19,8 @@
     <%- include('../views/cartIndex') %>
   </body>
 <!-- Option 2: Separate Popper and Bootstrap JS --> 
-<script src="/js/productsAndCartManage.js"></script>
+<!-- <script src="/js/productsAndCartManage.js"></script> -->
+<script src="/js/products.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
