--- a/views/cartIndex.ejs
+++ b/views/cartIndex.ejs
@@ -5,6 +5,9 @@
         <button style="background-color: #f38282; margin: 5px;" class="btn btn-sm" id="buy-carrito">
           Finaliza tu compra! 
         </button>
+        <button class="but_clearCart">
+          <i style="cursor: pointer;" class="far fa-trash-alt"> </i>
+        </button>
         <h2> TOTAL: $<b id="total_price"> </b> </h2>
     <% } else{ %>  
         <button style="background-color: #f38282; margin: 5px" class="btn btn-sm">
