--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,62 +1,30 @@
+* {
+    box-sizing: border-box;
+}
 
 header {
-    position: sticky;
-    top: 0;
-    z-index: 15;
+    position: relative;
     border-bottom: 1px solid black;
-    background-color: lightblue;
+    background-color:#FFC8D9;
 }
-.covid-19 {
-    background-color: red;
-}
-.covid-19 a:link {
-    color: white;
-}
-.covid-19 p {
-    padding: 7px;
-    color: white;
-    font-weight: bold;
-    text-decoration: underline;
-}
-.bannerContainer {
-    height: 150px;
-    width: 300px;
-}
-.banner {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-.nav-item {
-    padding: 1.3rem;
-}
-@media screen and (max-width: 480px) {
-    .nav-item {
-        padding: 8px;
-   }
-}
-.nav-link {
-    color: black !important;
-    transition: font-size 0.8s;
-}
-.nav-link:hover {
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-.nav-item input {
-    background-color: transparent;
-    border: none;
-    font-size: 17px;
-    border-bottom: 1.5px solid black;
-    color: black;
-    transition: all 0.5s;
-    width: 12em;
-}
-.nav-item input:focus {
-    outline: none;
-    border-bottom: 3px solid #5a405f;
-}
-.nav-item input:hover {
-    width: 12.8em;
-} 
 
+nav {
+    position: relative;
+}
+
+.flex_ul_div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 20px;
+}
+
+.flex_ul_div li {
+    list-style: none;
+    font-size: 18px;
+}
+
+.flex_ul_div li a {
+    color: white;
+    margin: 10px;
+}
