--- a/views/cartIndex.ejs
+++ b/views/cartIndex.ejs
@@ -8,7 +8,7 @@
         <button class="but_clearCart">
           <i style="cursor: pointer;" class="far fa-trash-alt"> </i>
         </button>
-        <h2> TOTAL: $<b id="total_price"> </b> </h2>
+        <h2 style="margin: 15px;"> TOTAL: $<b id="total_price"> </b> </h2>
     <% } else{ %>  
         <button style="background-color: #f38282; margin: 5px" class="btn btn-sm">
           <a style="text-decoration: none; color: white" href="/api/login-register"> ¡REGISTRATE! </a>
