--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -9,6 +9,7 @@ body {
     box-shadow: 1px 0px 50px 0px rgb(255,101,101);
         -webkit-box-shadow: 1px 0px 50px 0px rgb(255,101,101);
         -moz-box-shadow: 1px 0px 50px 0px rgb(255,101,101);
+    width: 100%;
 }
 
 #inputtext {
